--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-bindy</artifactId>
+            <artifactId>camel-sql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -77,6 +77,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-soap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-http4</artifactId>
         </dependency>
         <dependency>
@@ -86,6 +90,17 @@
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.173</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
         </dependency>
 
         <!-- testing -->
@@ -166,11 +181,12 @@
                     <manifestLocation>target/META-INF</manifestLocation>
                     <instructions>
                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                        <Export-Package>cz.cvut.iss.sysint*</Export-Package>
+                        <Export-Package>cz.cvut.iss.sysint</Export-Package>
                         <Export-Package>org.apache.activemq.camel.component</Export-Package>
                         <Import-Package>
                             *
                         </Import-Package>
+                        <DynamicImport-Package>*</DynamicImport-Package>
                     </instructions>
                 </configuration>
             </plugin>
@@ -186,9 +202,37 @@
                 </executions>
                 <configuration>
                     <tasks>
-                        <copy file="${build.directory}/${project.build.finalName}.jar" tofile="${project.basedir}/docker/sys-int.jar"/>
+                        <copy file="${build.directory}/${project.build.finalName}.jar" tofile="${project.basedir}/docker/main/sys-int.jar"/>
                     </tasks>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-codegen-plugin</artifactId>
+                <version>3.0.4.redhat-620133</version>
+                <executions>
+                    <execution>
+                        <id>generate-sources</id>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <wsdlOptions>
+                                <wsdlOption>
+                                    <wsdl>src/main/resources/wsdl/supplierA.wsdl</wsdl>
+                                </wsdlOption>
+                                <wsdlOption>
+                                    <wsdl>src/main/resources/wsdl/supplierB.wsdl</wsdl>
+                                    <extraargs>
+                                        <extraarg>-autoNameResolution</extraarg>
+                                    </extraargs>
+                                </wsdlOption>
+                            </wsdlOptions>
+                        </configuration>
+                        <goals>
+                            <goal>wsdl2java</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
