--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
-db.connection.hostAndPort=${env.SYS_PORT_9092_TCP:192.168.59.103:8082}
-supplier.a.url=${env.SYS_PORT_8443_TCP:192.168.59.103:8443}/supplier-a/SupplierAService
-supplier.b.url=${env.SYS_PORT_8443_TCP:192.168.59.103:8443}/supplier-b/SupplierBService
-accounting.url=${env.SYS_PORT_8443_TCP:192.168.59.103:8443}/accounting/rest/accounting/invoice/issue
+db.connection.hostAndPort=${env.SYS_PORT_9092_TCP:localhost:9092}
+supplier.a.url=${env.SYS_PORT_8443_TCP:localhost:8443}/supplier-a/SupplierAService
+supplier.b.url=${env.SYS_PORT_8443_TCP:localhost:8443}/supplier-b/SupplierBService
+accounting.url=${env.SYS_PORT_8443_TCP:localhost:8443}/accounting/rest/accounting/invoice/issue
+expedition.url=${env.SYS_PORT_61616_TCP:discovery:(fabric:masterslave)}
